[package]
name = "plasma-cash-tokens"
description = "Token logic using Plasma Cash history verification"
version = "0.1.0"
authors = ["Zatoichi Labs <admin@zatoichi-labs.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/zatoichi-labs/plasma-cash-tokens"

[features]
default = ["std"]
std = [
    'bitvec/std',
]

[dependencies.bitvec]
default-features = false
features = ['alloc']
version = "0.14"

[dev-dependencies]
ethabi = "8.0"
eth-secp256k1 = { version = "0.5.7", path = "./rust-secp256k1" }
ethereum-types = "0.6"
hex = "0.4"
keccak-hash = "0.2"
